# taconez

./: .dockerignore  .gitignore  .gitmodules  .nvim.lua.backup  .rsync-exclude  README.md  TODO.md  anesofi.drawio  anesowa.drawio  ansible.cfg  docker-compose.development.yaml  docker-compose.linux.yaml  docker-compose.production.yaml  docker-compose.vs-code.yaml  docker-compose.yaml  rsync_exclude.txt  transference-learning-cats.ipynb  transference-learning-high-heels.ipynb
.devcontainer/journal/: devcontainer.json
.devcontainer/playback-distributor/: devcontainer.json
.devcontainer/sound-detector/: devcontainer.json
.devcontainer/sound-player/: devcontainer.json
ansible/: README.md  hosts  master.yaml  master.yml  site.yaml  slaves.yaml  slaves.yml
ansible/group_vars/: all  all.yaml  all.yml
ansible/host_vars/: rpi-master.home.yaml  rpi-master.home.yml  rpi-slave-1.home.yaml  rpi-slave-1.home.yml  rpi-slave-2.home.yaml  rpi-slave-2.home.yml
design/: Taconez.fig
design/figma/: Taconez.fig
design/icons/: high-heel-icon.ai
design/logo/: taconez-logo.ai
docs/: 1-provisioning-and-deployment.md  1-provisioning.md  2-rpi-sound-setup.md  3-docker-container-sound.md  4-development-workflow.md  5-configuring-your-ide.md  5-stack-recipes.md  5-vs-code.md  6-ai-transfer-learning.md  6-transfer-learning.md  7-maintenance-notes.md  8-maintenance-notes.md  README.md  anesofi.drawio  development.md  influxdb.md  nfs.md  provisioning.md  sound.md  speakers.md
docs/images/: taconez.drawio  zeromq.drawio
influx-db/: clean_all_points.sh
influx-db/service/: exec-start.sh  exec-start.sh.j2  exec-stop.sh  exec-stop.sh.j2  influx-db.service.j2
influx/service/: exec-start.sh  exec-stop.sh  influxdb.service
journal/: .env  Dockerfile  Dockerfile.minimal  jest.config.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
journal/actions/: index.ts  rebroadcast-sound.ts
journal/app/: globals.css  layout.tsx  page.tsx  providers.tsx
journal/components/: button.tsx  index.tsx  sound-bubble.tsx  sound-partition.tsx  sound-plot.tsx  theme-switch.tsx  time-range-selector.tsx
journal/docker/: build-dev.sh  build-prod.sh  build-test.sh  run-dev.sh  run-prod.sh  run-test.sh
journal/lib/: index.ts  influx-data.ts  influx-query.ts  utils.ts
journal/service/: exec-start.sh
journal/types/: index.ts
lib/: README.md
lib/c/commons/: CMakeLists.txt  helpers.cmake  project.yml
lib/c/commons/include/anesowa/commons/: duration.h  message.h  potato.h  utils.h
lib/c/commons/include/taconez/commons/: duration.h  message.h  socket.h
lib/c/commons/src/: duration.c  message.c  multiplier.c  potato.c  socket.c  utils.c
lib/c/commons/tests/: CMakeLists.txt  test_commons.c  test_duration.c  test_utils.c
modules/journal/: Dockerfile  package-lock.json  package.json
modules/playback-distributor/: Dockerfile
modules/sound-detector/: .multiclass-ignore-sounds  .rsync-exclude  main.py  (+4 more)
playback-distributor/: CMakeLists.txt  Dockerfile  README.md  build-cmake-project.sh  playback_distributor.c
playback-distributor/docker/: build-dev.sh  build-prod.sh  build-test.sh  run-dev.sh  run-prod.sh  run-test.sh
playback-distributor/service/: exec-start.sh  exec-start.sh.j2  exec-stop.sh  playback-distributor.service.j2
playback-distributor/src/: message.c  message.h  playback_distributor.c  preroll.c  preroll.h  process_loop.c  process_loop.h
playback-distributor/test/: test_hello.c  test_playback_distributor.c
playback-distributor/tests/: CMakeLists.txt  test_playback_distributor.c  test_preroll_select.c
scripts/: clear-influx-db.sh  retrain-network.sh
sound-detector/: .asoundrc  .ignore-sounds  Dockerfile  README.md  TODO.md  explanation.ipynb  high_heel_detector.ipynb  main.py  mock_influx_db_write.py  mock_sound_detection.py  playback.py  pyproject.toml  pyrightconfig.json.backup  requirements.txt  sound_detector.py  specific_sound_detector.ipynb  transference-learning-high-heels.ipynb
sound-detector/docker/: build-dev.sh  build-prod.sh  build-test.sh  build_dev.sh  build_prod.sh  run-dev.sh  run-prod.sh  run-test.sh  run_dev.sh  run_prod.sh
sound-detector/high_heel_classifier/: fingerprint.pb  keras_metadata.pb  saved_model.pb
sound-detector/high_heel_classifier/variables/: variables.index
sound-detector/recipes/: record_and_playback.py  zeromq.py
sound-detector/retrained_model/: fingerprint.pb
sound-detector/retrained_model/variables/: variables.index
sound-detector/service/: anesowa-sound-detector.service.j2  exec-start-pre.sh.j2  exec-start.sh  exec-start.sh.j2  exec-stop.sh  exec-stop.sh.j2  exec_pre_start.sh  exec_start.sh  exec_stop.sh  sound-detector.service.j2  sound_detector.service
sound-detector/sound_detector/: audio.py  config.py  db.py  events.py  exceptions.py  inference.py  retrain.py  yamnet_model.py
sound-detector/sound_detector/models/: retrained.py  yamnet.py
sound-detector/sound_detector/models/custom/saved_model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
sound-detector/sound_detector/models/custom/saved_model/model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
sound-detector/sound_detector/models/custom/saved_model/model/variables/: variables.index
sound-detector/sound_detector/models/custom/saved_model/variables/: variables.index
sound-player/: CMakeLists.txt  CMakeLists.txt.backup  Dockerfile  README.md  addPulseAudio.cmake  build-cmake-project.sh  client.cpp  foo_four.c  foo_one.c  foo_three.c  foo_two.c  server.cpp  sound_player.c  utils.h
sound-player/docker/: build-dev.sh  build-prod.sh  build-test.sh  run-dev.sh  run-prod.sh  run-test.sh
sound-player/service/: anesowa-sound-player.service.j2  exec-start.sh  exec-stop.sh  sound-player.service.j2
sound-player/src/: play.c  play.h  process_loop.c  process_loop.h  sound_player.c  time_utils.c  time_utils.h
sound-player/tests/: CMakeLists.txt  test_sound_player.c
zmq-grpc/: docker-compose.production.yaml  docker-compose.yaml  taconez_grpc.proto
zmq-trpc/: Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
(+117 files in other folders)
