[tool.poetry]
name = "sound-detector"
version = "0.1.0"
description = ""
authors = ["Ramon Blanquer <blanquer.ramon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.12"
tensorflow = "~2.13"
tensorflow-io = "~0.34"
tensorflow-hub = "~0.15"
pyaudio = "^0.2.14"


[tool.poetry.group.dev.dependencies]
matplotlib = "^3.8.1"
pandas = "^2.1.3"
black = "^23.11.0"
ruff = "^0.1.5"
ipython = "^8.17.2"
notebook = "^7.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
